--- a/src/remix_finder/templates/results_old.html
+++ b/src/remix_finder/templates/results_old.html
@@ -16,14 +16,10 @@
 
     <!-- Custom styles -->
     <link href="{{ url_for('static',filename='results.css') }}" rel="stylesheet">
-
   </head>
-  <body style="background-image: url({{artist.image_url}});
+  <body style="background-image: url({{artist_image_url}});
     background-repeat: no-repeat;background-attachment: fixed;
     background-position: center;">
-
-    <input name="x" id="x" type="hidden" value="" />
-    <input name="y" id="y" type="hidden" value="" />
 
     <div id="header">
     </div>
@@ -35,83 +31,54 @@
             Your browser does not support the audio element.
         </audio>
 
-        {% for playlist in playlists %}
+        <div class="col-md-12 results-container">
 
-            <div class="col-md-12 results-container">
+            <!-- Artist Remixed -->
+            <span class="remixed_header">Remixed by </span><span class="artist_name">{{artist_name}}</span>
 
-                <!-- Playlist Title-->
-                <span class="remixed_header">{{ playlist['styled_name']|safe }}</span>
+            <!-- Remix Results -->
+            {% for track in artist_remixed%}
 
-                <!-- Remix Results -->
-                {% for track in playlist['tracks'] %}
+            <div>
 
-                <div>
-
-                    <button class="control" id="{{track.uri}}" type="button" onclick="play_pause('{{ track['preview_url'] }}','{{track.uri}}')">{{ track }}
-                        <i id="play_{{track.uri}}" class="fa fa-play"></i>
-                        <i id="pause_{{track.uri}}" class="fa fa-pause"></i>
-                    </button>
-
-                </div>
-                <br>
-
-                {% endfor %}
-
-                <! -- Create the playlist -->
-                <form action="" class="form" method="post">
-
-                    <input type="hidden" value="{{ playlist['key'] }}" name="key" />
-
-                    <!-- If playlist created, disable button -->
-                    <button
-
-                    {% if playlist['created'] %}
-                        disabled
-                    {% endif %}
-
-                    class="btn btn-default btn-sm" name="submit" type="submit">
-                            <img class="icon" src="{{ url_for('static',filename='spotify.ico') }}">
-                            <span>
-
-                            {% if playlist['created'] %}
-                                Playlist Created!
-                            {% else %}
-                                Create Playlist
-                            {% endif %}
-                            </span>
-                    </button>
-
-                </form>
+                <button class="control" id="{{track.uri}}" type="button" onclick="play_pause('{{ track['preview_url'] }}','{{track.uri}}')">{{ track }}
+                    <i id="play_{{track.uri}}" class="fa fa-play"></i>
+                    <i id="pause_{{track.uri}}" class="fa fa-pause"></i>
+                </button>
 
             </div>
+            <br>
 
-        {% endfor %}
+            {% endfor %}
 
-        <div id="content">
+            <! -- Create the playlist -->
+            <form action="" method="post">
+
+                {% if created_1 %}
+
+                <button disabled class="btn btn-default" name="submit"
+                        type="submit" value="artist_remixed">
+                        Playlist Created!
+                </button>
+
+                {% else %}
+
+                <button class="btn btn-default" name="submit"
+                        type="submit" value="remixed_by_artist">
+                        Create Spotify Playlist
+                </button>
+
+                {% endif %}
+
+            </form>
+
         </div>
 
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
     <script>
-
-    $(window).scroll(function() {
-      sessionStorage.scrollTop = $(this).scrollTop();
-    });
-
-    $(document).ready(function() {
-      if (sessionStorage.scrollTop != "undefined") {
-        $(window).scrollTop(sessionStorage.scrollTop);
-      }
-    });
-
-    $('.form').submit(function() {
-        var span = $(this).find('.btn').children("span");
-        span.text('Creating Playlist...');
-        $(this).find('.btn').prop('disabled', true);
-    });
 
     function pause(id) {
         var play_icon = document.getElementById('play_' + id)
@@ -162,6 +129,5 @@
     </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="static/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/maintainscroll.jquery.min.js"></script>
   </body>
 </html>
