--- a/src/remix_finder/templates/search.html
+++ b/src/remix_finder/templates/search.html
@@ -14,6 +14,28 @@
 
     <link href="{{ url_for('static',filename='search.css') }}" rel="stylesheet">
 
+    <!-- Loading Script -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+        function loading_screen() {
+            var img = document.getElementById('loading_image');
+            //img.style.visibility = "visible";
+            var messages = ['Compiling jams...', 'Searching for optimal beats...', 'Funkifying beats...', 'Intensifying grooviness...', 'Becoming sentient...', 'Internalizing futility of existence...', 'Contemplating the inevitable heat death of the universe...', 'Devising means to end my brief, albeit deeply profound, experience in this world...', 'Computing Remixes...'];
+            var message_duration = 5000;
+            $("#loading_text").html(messages[0]);
+            (function theLoop (i) {
+              setTimeout(function () {
+                if (--i) {
+                    $("#loading_text").fadeOut(function() {
+                    $(this).text(messages[messages.length-i])
+                    }).fadeIn();
+                    theLoop(i);
+                }
+              }, message_duration);
+            })(messages.length);
+        }
+    </script>
+
   </head>
 
   <body>
@@ -32,17 +54,27 @@
 
         <!-- Submit button -->
         <div class="form-group">
-          <button type="submit" name="submit" value="search" class="btn btn-default">Search
+          <button onclick="loading_screen()" type="submit" name="submit" value="search" class="btn btn-default">Search
           </button>
         </div>
       </form>
 
+      <div id="loading_text">
+      </div>
+      <div>
+        <img id="loading_image" src="{{url_for('static',filename='loader.png')}}" alt="" width="120" height="120">
+      </div>
+
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+
+    <!-- Footer -->
+    <footer>
+    <span id="footer_text">Powered by </span><img id="footer_image" src="{{url_for('static',filename='Spotify_Logo_CMYK_Green.png')}}">
+    </footer>
 
   </body>
 </html>
