--- a/src/remix_finder/static/search.css
+++ b/src/remix_finder/static/search.css
@@ -1,3 +1,13 @@
+.footer {
+    position: absolute;
+    bottom: 0;
+    width:100%;
+    height:60px;
+    text-align: center;
+    font-size: 25px;
+    color:#1ab26b;
+}
+
 body {
     font-family: Courier;
 }
@@ -23,31 +33,20 @@ h1 {
     width:10%;
 }
 
-footer {
-    text-align: center;
-    font-size: 25px;
-    color:#1ab26b;
-}
-
 #footer_text{
     display: inline-block;
     position: relative;
-    top: 2px;
+    top: 4px;
     margin-right: 10px;
 }
 
 #loading_text{
-    height: 100px;
+    height: 50px;
+    text-align: center;
 }
 
 #loading_image {
     visibility: hidden;
     display: block;
     margin: auto;
-    -webkit-animation:spin 4s linear infinite;
-    -moz-animation:spin 4s linear infinite;
-    animation:spin 4s linear infinite;
 }
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
