--- a/src/remix_finder/templates/search.html
+++ b/src/remix_finder/templates/search.html
@@ -15,7 +15,7 @@
     <link href="{{ url_for('static',filename='search.css') }}" rel="stylesheet">
   </head>
 
-  <body>
+  <body onLoad="loading_page()">
 
     <img class="img" id="logo" src="{{url_for('static',filename='images/logo.png')}}">
 
