--- a/src/remix_finder/static/results.css
+++ b/src/remix_finder/static/results.css
@@ -1,3 +1,12 @@
+@font-face{
+    font-family: "lazer84";
+    src: url('fonts/Lazer84.ttf');
+}
+
+@font-face{
+    font-family: "Monoton";
+    src: url('fonts/Monoton-Regular.ttf');
+}
 
 body {
     font-family: Courier;
@@ -10,25 +19,16 @@ h1 {
 }
 
 .remixed_header{
-    display: inline-block;
-    font-family:lazer84;
+    font-family:lazer84, Courier;
      background: -webkit-linear-gradient(#f90000, #9200b7);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 50px;
+    font-size: 4vw;
     padding: 10px;
 }
 
 .artist_name {
-    top: 5px;
-    position: relative;
-    display: inline-block;
-    font-size: 50px;
-    font-family: Monoton;
-     background: -webkit-linear-gradient(#f90000, #9200b7);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    padding: 10px;
+    font-family: Monoton, Courier;
 }
 
 .control {
